--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -14,8 +14,8 @@
     <meta name="description" content="Techium is a digital agency">
 
     <!-- ファビコン -->
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+	<link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+	<link rel="icon" type="image/png" href="./favicon/favicon.png">
   </head>
   <body>
   </body>
