--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,34 +11,23 @@
     <h1>Welcome to our website!</h1>
   </header>
 
-  <!-- Works section -->
-  <section class="works">
+  <section id="works">
     <h2>Our Works</h2>
     <article>Work 1</article>
     <article>Work 2</article>
     <article>Work 3</article>
   </section>
-
-  <!-- Latest news section -->
-  <section class="latest-news">
+  
+  <section id="latest-news">
     <h2>Latest News</h2>
     <article>Article 1</article>
     <article>Article 2</article>
     <article>Article 3</article>
   </section>
-
-  <!-- Testimonials section -->
-  <section class="testimonials">
+  
+  <section id="testimonials">
     <h2>Testimonials</h2>
     <article>Testimonial 1</article>
     <article>Testimonial 2</article>
     <article>Testimonial 3</article>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Holberton School</p>
-  </footer>
-
-</body>
-</html>
+  </section>  
