--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -30,4 +30,6 @@
     <article>Testimonial 1</article>
     <article>Testimonial 2</article>
     <article>Testimonial 3</article>
-  </section>  
+  </section>
+</body>
+</html>
