--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,25 +11,26 @@
     <h1>Welcome to our website!</h1>
   </header>
 
-  <section id="works">
+  <section id="works" class="works">
     <h2>Our Works</h2>
     <article>Work 1</article>
     <article>Work 2</article>
     <article>Work 3</article>
   </section>
   
-  <section id="latest-news">
+  <section id="latest-news" class="latest-news">
     <h2>Latest News</h2>
     <article>Article 1</article>
     <article>Article 2</article>
     <article>Article 3</article>
   </section>
   
-  <section id="testimonials">
+  <section id="testimonials" class="testimonials">
     <h2>Testimonials</h2>
     <article>Testimonial 1</article>
     <article>Testimonial 2</article>
     <article>Testimonial 3</article>
   </section>
+
 </body>
 </html>
