--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Holberton - Advanced HTML</title>
-</head>
-<body>
-
-  <!-- Header -->
-  <header>
-    <h1>Welcome to our website!</h1>
-  </header>
-
-  <section id="works" class="works">
-    <h2>Our Works</h2>
-    <article>Work 1</article>
-    <article>Work 2</article>
-    <article>Work 3</article>
-  </section>
-  
-  <section id="latest-news" class="latest-news">
-    <h2>Latest News</h2>
-    <article>Article 1</article>
-    <article>Article 2</article>
-    <article>Article 3</article>
-  </section>
-  
-  <section id="testimonials" class="testimonials">
-    <h2>Testimonials</h2>
-    <article>Testimonial 1</article>
-    <article>Testimonial 2</article>
-    <article>Testimonial 3</article>
-  </section>
-
-</body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<title>Homepage - Techium</title>
+		<meta name="description" content="Techium is a digital agency">
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/png" href="./favicon.png">
+	</head>
+	<body>
+		<header>Header</header>
+		<main>
+			<section>Hero section</section>
+			<section>Services section</section>
+			<section>
+				Works section
+				<article>Work 1</article>
+				<article>Work 2</article>
+				<article>Work 3</article>
+			</section>
+			<section>About section</section>
+			<section>
+				Latest news section
+				<article>Article 1</article>
+				<article>Article 2</article>
+				<article>Article 3</article>
+			</section>
+			<section>
+				Testimonials section
+				<article>Testimonial 1</article>
+				<article>Testimonial 2</article>
+				<article>Testimonial 3</article>
+			</section>
+			<section>Contact section</section>
+		</main>
+		<footer>Footer</footer>
+	</body>
 </html>
